Finished sincronizadas page and made cantaritos page

--- a/recipes/Sincronizadas.html
+++ b/recipes/Sincronizadas.html
@@ -17,8 +17,9 @@
     </ul>
 
     <ol>
-        <li>Whit this all we need to do is start the stove and put a pan</li>
-        <li></li>        
+        <li>Whit this all we need to do is start the stove and put a pan whit 2 tortilla's on it</li>
+        <li>Put some cheese in one tortilla and the ham in the other one</li>
+        <li>Now put the tortillas together and you have your sincronizada!</li>      
     </ol>
 
     <a href="../index.html">Return to main page</a>
